scratchpad/stonebranch-poc/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stonebranch
  labels:
    app.kubernetes.io/part-of: stonebranch
